# compris

./: CPS.md  Cargo.toml  README.md  TODO
cli/: Cargo.toml
cli/src/: errors.rs  main.rs  run.rs
cli/src/commands/: input_format.rs  mod.rs  output_format.rs  root.rs
cli/src/commands/convert/: convert.rs  mod.rs  read.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/derive_resolve/attributes/: field.rs
macros/src/derive_resolve/enum_generator/: handle_single_variant.rs  handle_variant.rs  impl_resolve.rs
macros/src/derive_resolve/struct_generator/: handle_field.rs  handle_null.rs  handle_other_keys.rs  handle_single_field.rs  impl_annotated.rs  impl_resolve.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
scripts/: build-docs  build-pgo  build-python  install-for-user
