[package]
edition = "2024"

name = "compris-cli"
description = "Query and convert Composite Primitive Schema (CPS) formats"
version = "0.0.11"
rust-version = "1.93"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/compris"
documentation = "https://docs.rs/compris"
authors = ["Tal Liron"]

readme = "../README.md"

categories = [
    "data-structures",
    "encoding",
    "parsing",
] # https://crates.io/category_slugs
keywords = ["cps"]

[dependencies]
anstream = "1.0.0"
clap = { version = "4.5.58", features = ["derive"] }
clap_complete_command = "0.6.1"
kutil = { version = "=0.0.5", features = ["cli", "clap"] }
compris = { version = "=0.0.11", features = ["serde"] }
problemo = { version = "=0.0.11", features = ["backtrace-external"] }
read-url = { version = "=0.0.10", default-features = false, features = [
    "blocking",
] }
tracing = "0.1.44"

[features]
default = ["file", "http"]
file = ["read-url/file"]
http = ["read-url/http"]

[[bin]]
name = "compris"
path = "src/main.rs"

[profile.release]
strip = "debuginfo"
lto = true
