[package]
edition = "2024"

name = "compris-macros"
description = "Procedural macros for Compris"
version = "0.0.11"
rust-version = "1.92"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/compris"
documentation = "https://docs.rs/compris"
authors = ["Tal Liron"]

readme = "../README.md"

categories = [
    "data-structures",
    "encoding",
    "parsing",
] # https://crates.io/category_slugs
keywords = ["cps"]

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = "2.0.114"

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
